--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -456,9 +456,102 @@ template {
   display: none;
 }
 
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html {
+  font-family: verdana, arial, sans-serif;
+  font-size: 12px;
+}
+
+body {
+  background: url(../img/background.jpg);
+  background-position: 50% 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .wrapper {
   max-width: 850px;
-  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.container {
+  background-color: #efefef;
+}
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 30px 0;
+}
+
+.menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 200px;
+          flex: 1 0 200px;
+}
+
+.menu-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-decoration: none;
+  list-style-type: none;
+  color: #efefef;
+}
+
+.menu-list__item {
+  font-size: 12px;
+}
+
+.menu-list__item a {
+  border-radius: 15px;
+  padding: 12px 15px;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.menu-list__item a:hover {
+  background-color: #858585;
+}
+
+.menu .-style-active > a {
+  background-color: #0b81be;
+}
+
+.slide {
+  position: absolute;
+  opacity: 0;
+}
+
+.slide.active {
+  opacity: 1;
 }
 
 .controls {
@@ -469,16 +562,16 @@ template {
   padding-top: 20px;
 }
 
-header {
-  padding: 0 50vw;
-  margin: 0 -50vw;
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
-.slide {
-  position: absolute;
-  opacity: 0;
-}
-
-.slide.active {
-  opacity: 1;
+.footer-right {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
 }
