--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -1,14 +1,30 @@
+* {
+    box-sizing: border-box;
+}
+
+html {
+    font-family: verdana, arial, sans-serif;
+    font-size: 12px;
+}
+
+body {
+    background: url(../img/background.jpg);
+    background-position: 50% 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .wrapper {
     max-width: $large;
-    margin: 0 auto;
+    // margin: 0 auto;
+    padding: 0 15px;
+}
+
+.container {
+    // background: rgba(255, 255, 255, 0.1);
+    background-color: #efefef;
 }
 
 // wtf
 
-.controls {
-    margin-top: -20px;
-}
-
-.slides {
-    padding-top: 20px;
-}
