--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -483,24 +483,45 @@ body {
 
 .wrapper {
   max-width: 850px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding: 0 15px;
 }
 
-.container {
-  background-color: #efefef;
+h2 {
+  margin: 10px 0;
+  color: #0b81be;
+  font-size: 2rem;
+  font-weight: normal;
+}
+
+p {
+  color: #858585;
+  line-height: 1.75;
+}
+
+li {
+  line-height: 1.5;
 }
 
 .header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 100%;
-          flex: 0 0 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 30px 0;
+}
+
+.header-logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 30px 0;
 }
 
 .menu {
@@ -511,22 +532,24 @@ body {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 200px;
-          flex: 1 0 200px;
 }
 
 .menu-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-decoration: none;
   list-style-type: none;
   color: #efefef;
+  min-height: 40px;
 }
 
 .menu-list__item {
   font-size: 12px;
+  margin-left: 7px;
 }
 
 .menu-list__item a {
@@ -545,33 +568,255 @@ body {
   background-color: #0b81be;
 }
 
+.container {
+  background: rgba(255, 255, 255, 0.1);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-bottom: 50px;
+  padding: 15px;
+}
+
+.main {
+  background-color: #efefef;
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
+  position: relative;
+  padding: 0 20px 15px 15px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 calc(100% - 300px);
+          flex: 1 0 calc(100% - 300px);
+}
+
+.main p {
+  text-align: justify;
+}
+
+.slider {
+  position: relative;
+  width: 100%;
+  padding: 15px;
+  background-color: #efefef;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+  min-height: 226px;
+}
+
+.slides {
+  position: relative;
+}
+
 .slide {
   position: absolute;
+  top: 0;
   opacity: 0;
+  border: 7px solid #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-image: url(/assets/img/carousel-item-bg.png);
+}
+
+.slide-image {
+  padding: 15px;
+}
+
+.slide-description {
+  padding: 15px 30px 15px 15px;
+  color: #efefef;
+}
+
+.slide-description h3 {
+  text-transform: uppercase;
+  font-weight: normal;
+  font-size: 24px;
+  margin: 15px 0;
+}
+
+.slide-description p {
+  margin: 12px 0 15px;
+  line-height: 1.5;
 }
 
 .slide.active {
   opacity: 1;
 }
 
-.controls {
-  margin-top: -20px;
+.controls > a {
+  position: absolute;
+  top: 50%;
+  z-index: 2;
 }
 
-.slides {
-  padding-top: 20px;
+.prev {
+  left: -3px;
 }
 
-footer {
+.next {
+  right: -3px;
+  -webkit-transform: scale(-1, 1);
+      -ms-transform: scale(-1, 1);
+          transform: scale(-1, 1);
+}
+
+.left-sidebar {
+  background-color: #efefef;
+  position: relative;
+  padding: 0 15px 15px 20px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 300px;
+          flex: 0 0 300px;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+}
+
+.left-sidebar ul {
+  padding-left: 20px;
+}
+
+.left-sidebar li {
+  position: relative;
+  color: #858585;
+  list-style: none;
+  font-style: italic;
+  padding: 7.5px;
+}
+
+.left-sidebar li::before {
+  position: absolute;
+  content: url(../img/main-list-arrow.png);
+  margin-left: -15px;
+}
+
+.bottom-sidebar {
+  position: relative;
+  background-color: #efefef;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 100%;
+          flex: 1 0 100%;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-ordinal-group: 5;
+      -ms-flex-order: 4;
+          order: 4;
+  padding: 15px;
+}
+
+.bottom-sidebar__left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 50%;
+          flex: 1 0 50%;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  padding: 20px 15px 25px;
+  border: 5px solid #ffffff;
+}
+
+.bottom-sidebar__right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 50%;
+          flex: 1 0 50%;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  padding: 20px 15px 25px;
+  border: 5px solid #ffffff;
+}
+
+.bottom-sidebar img {
+  padding: 0 15px 15px 0;
+}
+
+.footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.4);
 }
 
-.footer-right {
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
+.footer .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 37px;
+}
+
+.footer-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.footer-left__img {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 55px;
+          flex: 0 0 55px;
+}
+
+.footer-left__description {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 100px;
+          flex: 1 0 100px;
+}
+
+.footer-left__description span {
+  display: block;
+  color: #ffffff;
+  font-size: 24px;
+}
+
+.footer-left__description span:last-of-type {
+  color: #727272;
+  font-size: 12px;
+}
+
+.footer-left__post {
+  position: relative;
+  margin: 12px 30px 30px 37px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 calc(100% - 67px);
+          flex: 1 0 calc(100% - 67px);
+  padding: 20px;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.footer-left__post p {
+  line-height: 18px;
+}
+
+.footer-left__post span {
+  color: #0b81be;
+  font-size: 9.5px;
+  font-style: italic;
+}
+
+.footer-left .footer-left__post:before {
+  position: absolute;
+  left: 0;
+  top: -18px;
+  content: url(../img/twitter-speech-bubble.png);
 }
