--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -3,26 +3,36 @@
     // margin: 0 -50vw;
 
     display: flex;
-    flex: 0 0 100%;
-    align-items: center;
+    justify-content: space-between;
+    // flex: 0 0 100%;
+    // align-items: center;
     margin: 30px 0;
+
+    &-logo {
+        display: flex;
+        align-items: center;
+    }
 }
 
 .menu {
     display: flex;
     position: relative;
     justify-content: flex-end;
-    flex: 1 0 200px;
+    // flex: 1 0 200px;
 
     &-list {
         display: flex;
+        align-items: center;
         
         text-decoration: none;
         list-style-type: none;
         color: $light-color;
 
+        min-height: 40px;
+
         &__item {
-            font-size: 12px;      
+            font-size: 12px;  
+            margin-left: 7px;    
 
             a {
                 border-radius: 15px;
