--- a/assets/scss/_bottom-sidebar.scss
+++ b/assets/scss/_bottom-sidebar.scss
@@ -6,7 +6,6 @@
     flex: 1 0 100%;
     flex-wrap: wrap;
     order: 4;
-    
     padding: 15px;
 
 
@@ -17,6 +16,8 @@
         align-items: flex-start;
         padding: 20px 15px 25px;
         border: 5px solid #ffffff;
+        border-right: none;
+        background: linear-gradient(to bottom, #ffffff 0%, #f5f5f5 50%, #eeeeee 100%);
     }
 
     &__right {
@@ -26,11 +27,39 @@
         align-items: flex-start;
         padding: 20px 15px 25px;
         border: 5px solid #ffffff;
+        border-left: none;
+        background: linear-gradient(to bottom, #ffffff 0%, #f5f5f5 50%, #eeeeee 100%);
     }
 
     img {
         padding: 0 15px 15px 0;
         
+    }
+
+    p {
+        margin: 0;
+    }
+}
+
+.bottom-sidebar::before {
+    position: absolute;
+    top: 14px;
+    right: 14px;
+    bottom: 14px;
+    left: 14px;
+    content: "";
+    background-color: #dddddd;
+}
+
+@media (min-width: $small + 1) {
+
+    .bottom-sidebar__left::after {
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 100%;
+        content: "";
+        border-right: 1px solid #dddddd;
     }
 }
 
