--- a/assets/scss/_carousel.scss
+++ b/assets/scss/_carousel.scss
@@ -2,10 +2,10 @@
     position: relative;
     width: 100%;
     padding: 15px;
-    background-color: #efefef;
+    background-color: $light-color;
     order: 1;
 
-    min-height: 226px;
+    min-height: 236px;
 }
 
 .slides {
@@ -39,6 +39,7 @@
         p {
             margin: 12px 0 15px;
             line-height: 1.5;
+            color: $light-color;
         }
     }
 
@@ -49,16 +50,16 @@
 
 .controls > a {
     position: absolute;
-    top: 50%;  
+    top: 43%;  
     z-index: 2;
 }
 
 .prev {
-    left: -3px;
+    left: 3px;
 }
 
 .next {
-    right: -3px;
+    right: 3px;
     transform: scale(-1 , 1);
 }
 
