--- a/assets/scss/_bottom-sidebar.scss
+++ b/assets/scss/_bottom-sidebar.scss
@@ -18,6 +18,11 @@
         border: 5px solid #ffffff;
         border-right: none;
         background: linear-gradient(to bottom, #ffffff 0%, #f5f5f5 50%, #eeeeee 100%);
+
+        @media (max-width: 768px) {
+            flex: 1 0 100%;
+            padding: 15px;
+        }
     }
 
     &__right {
@@ -29,6 +34,11 @@
         border: 5px solid #ffffff;
         border-left: none;
         background: linear-gradient(to bottom, #ffffff 0%, #f5f5f5 50%, #eeeeee 100%);
+
+        @media (max-width: 768px) {
+            flex: 1 0 100%;
+            padding: 15px;
+        }
     }
 
     img {
@@ -63,3 +73,9 @@
     }
 }
 
+@media (max-width: 768px) {
+    .bottom-sidebar__right img {
+        padding: 0 0 15px 15px;
+        order: 2;
+    }
+}
