--- a/assets/scss/_left-sidebar.scss
+++ b/assets/scss/_left-sidebar.scss
@@ -22,6 +22,12 @@
         content: url(../img/main-list-arrow.png);
         margin-left: -15px;
     }
+
+    @media (max-width: 768px) {
+        flex: 1 0 100%;
+        padding: 0 20px 20px 20px;
+        order: 3;
+    }
 }
 
 @media (min-width: 769px) {
