--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -24,6 +24,12 @@
             color: #424242;
         }
     }
+
+    @media (max-width: 768px) {
+        flex: 1 0 100%;
+        padding: 20px;
+        order: 2;
+    }
 }
 
 
