--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -698,7 +698,9 @@ li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-image: url(/assets/img/carousel-item-bg.png);
+  background: url(/assets/img/carousel-item-bg.png);
+  background-position: 50% 50%;
+  background-size: cover;
 }
 
 .carousel-slide__image {
