--- a/assets/scss/_carousel.scss
+++ b/assets/scss/_carousel.scss
@@ -18,8 +18,7 @@
     border: 7px solid #ffffff;
 
     display: flex;
-    // background-image: url(/assets/img/carousel-item-bg.png);
-    background: url(/assets/img/carousel-item-bg.png);
+    background-image: url(../img/carousel-item-bg.png);
     background-position: 50% 50%;
     background-size: cover;
 
