--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -698,7 +698,7 @@ li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background: url(/assets/img/carousel-item-bg.png);
+  background-image: url(../img/carousel-item-bg.png);
   background-position: 50% 50%;
   background-size: cover;
 }
