--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -479,6 +479,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  overflow-x: hidden;
 }
 
 .wrapper {
