--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -22,11 +22,26 @@
         color: $light-color;
         min-height: 40px;
 
+        
+
+        @media (max-width: 850px) {
+            position: absolute;
+            z-index: -999;
+            top: 100%;
+            right: -15px;
+            visibility: hidden;
+            flex-direction: column;
+            width: 100vw;
+            opacity: 0;
+            background-color: rgba(0, 0, 0, 0.8);
+        }
+
         &-item {
             width: 100%;
             font-size: 12px;  
             margin-left: 7px; 
-            text-align: center;   
+            text-align: center; 
+            display: block;  
 
             a {
                 display: block;
@@ -41,44 +56,10 @@
                 }
             }
         }
-
-        @media (max-width: 850px) {
-            position: absolute;
-            z-index: -999;
-            top: 100%;
-            right: -15px;
-            visibility: hidden;
-            flex-direction: column;
-            width: 100vw;
-            transition: opacity 0.5s;
-            opacity: 0;
-            background-color: rgba(0, 0, 0, 0.8);
-        }
     }
 
     .-style-active > a {
         background: linear-gradient(to bottom, #0f8bbe 0%, #2989d8 50%, #207cca 51%, #0eb7fe 100%);
-    }
-
-    .menu__list.active {
-        padding: 0;
-        z-index: 3;
-        visibility: visible;
-        opacity: 1;
-    }
-
-    .menu__list.active 
-    .menu__list-item {
-        width: 100%;
-        margin: 0;
-        text-align: center;
-    }
-
-    .menu__list.active 
-    .menu__list-item a {
-        width: 100%;
-        padding: 15px;
-        border-radius: 0;
     }
 
     .menu__hamburger {
@@ -125,4 +106,25 @@
         top: -6px;
         transform: rotate(-225deg);
     }
+}
+
+.menu__list.active {
+    padding: 0;
+    z-index: 3;
+    visibility: visible;
+    opacity: 1;
+}
+
+.menu__list.active 
+.menu__list-item {
+    width: 100%;
+    margin: 0;
+    text-align: center;
+}
+
+.menu__list.active 
+.menu__list-item a {
+    width: 100%;
+    padding: 15px;
+    border-radius: 0;
 }
