--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -546,6 +546,9 @@ li {
   list-style-type: none;
   color: #efefef;
   min-height: 40px;
+  -webkit-transition: opacity 0.3s;
+  -o-transition: opacity 0.3s;
+  transition: opacity 0.3s;
 }
 
 .menu__list-item {
@@ -560,9 +563,6 @@ li {
   display: block;
   border-radius: 15px;
   padding: 12px 15px;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
   text-decoration: none;
   color: #efefef;
 }
