--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -21,6 +21,8 @@
         list-style-type: none;
         color: $light-color;
         min-height: 40px;
+        
+        transition: opacity 0.3s;
 
         
 
@@ -47,7 +49,6 @@
                 display: block;
                 border-radius: 15px;
                 padding: 12px 15px;
-                transition: all 0.5s;
                 text-decoration: none;
                 color: $light-color;
 
